# DECODE

./: .bumpversion.cfg  .gitignore  .gitmodules  .pep8speaks.yml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  DEVELOPER.md  Dockerfile  MANIFEST.in  README.md  SimulationDefault.ini  dataprep.py  dependencies.yaml  environment.yaml  environment.yml  environment_cpu.yaml  environment_cpu_py38_pt14.yml  environment_cpu_py38_torch15.yaml  environment_cpu_py38_torch15.yml  environment_cuda.yaml  environment_cuda10.yml  environment_cuda101_py38_pt14.yml  environment_cuda102_py38_torch15.yaml  environment_cuda102_py38_torch15.yml  environment_cuda10_torchv1_2.yml  environment_docs.yaml  environment_pytorchv1_2.yml  environment_source_cuda101.yml  evaluation.py  forward.py  gateway.yaml  missingFromNumpy.py  model.py  psf_kernel.py  requirements.txt  setup.py  simulator.py  train.py
.github/ISSUE_TEMPLATE/: failed-training-or-fit-with-artifacts.md  web_availability.md
.github/workflows/: build-upload.yml  manage_issues.yml  manage_pr.yml  superlinter.yml  test.yml  test_gateway.yml  test_packages.yml  unit_tests.yml  unit_tests_future.yml
cachedir/simulation_engine/: README.md
conda/: conda_build_config.yaml
conda/decode/: bld.bat  meta.yaml
conda/deepSMLM/: build.sh  meta.yaml
config/: param_friendly.yaml  template.json  template.yaml  template.yml
data/: README.md
decode/: __init__.py
decode/emitter/: __init__.py  emitter.py  filter.py  process.py
decode/evaluation/: __init__.py  evaluation.py  match_emittersets.py  metric.py  predict_dist.py  utils.py
decode/generic/: __init__.py  asset_handler.py  deploy.py  emitter.py  lazy.py  process.py  slicing.py  tensor.py  test_utils.py  utils.py
decode/io/: __init__.py  calibration_io.py  emitter_io.py  frames.py  frames_io.py  model.py  param.py  param_io.py  psf.py
decode/neuralfitter/: __init__.py  coord_transform.py  data.py  dataset.py  de_bias.py  frame_processing.py  logger.py  loss.py  losscollection.py  model.py  post_processing.py  process.py  sampler.py  scale_transform.py  spec.py  target_generator.py  train_val_impl.py  weight_generator.py
decode/plot/: __init__.py  fancy.py  fancy_plot.py  frame_coord.py  plot.py  utils.py
decode/renderer/: __init__.py  renderer.py
decode/simulation/: __init__.py  background.py  camera.py  code.py  emitter_generator.py  interpolate.py  microscope.py  noise.py  noise_distributions.py  psf_kernel.py  sampler.py  simulator.py
decode/test/: __init__.py  asset_handler.py  pytest.ini  run_all.py  test_asset_handler.py  test_assets_web.py  test_background.py  test_checkpoint.py  test_dataset.py  test_debias.py  test_decode_import.py  test_deepsmlm.py  test_emittergenerator.py  test_emitterset.py  test_emittertrafo.py  test_eval_utils.py  test_evaluation.py  test_frame_coord.py  test_frame_processing.py  test_gateway.py  test_generic_emitter.py  test_generic_inout_util.py  test_generic_utils.py  test_generic_utils_processing.py  test_inference.py  test_kde_sorted.py  test_loadSaveModel.py  test_log_train_val_progress.py  test_logger_wrapper.py  test_losscollection.py  test_matching.py  test_model_speced_impl.py  test_neuralfitter_convergence.py  test_neuralfitter_inference_inference.py  test_neuralfitter_inference_utils.py  test_neuralfitter_loss.py  test_photcamera.py  test_post_processing.py  test_psf_kernel.py  test_renderer.py  (+16 more)
decode/utils/: __init__.py  bookkeeping.py  calibration_io.py  checkpoint.py  dependency.py  deprecate_warning.py  emitter_io.py  emitter_trafo.py  example_helper.py  examples.py  files.py  frames_io.py  future.py  hardware.py  loader.py  notebooks.py  param_auto.py  param_io.py  param_schema.py  system.py  torch.py  types.py
deepsmlm/: __init__.py  all_tests.py
deepsmlm/cpp_src/: CMakeLists.txt  CMakeLists_temprm.txt  setup.py  setup_torch.py
deepsmlm/cpp_src/cubicSpline/: main.cpp
deepsmlm/cpp_src/cubicSpline/cubicSplineLibrary/: cubic_spline.c  cubic_spline.h
deepsmlm/cpp_src/dummyLibrary/: dummy_lib.c  dummy_lib.h  main.c
deepsmlm/cpp_src/include/: multi_crlb.hpp  spline_psf.h  spline_psf_gpu.cuh  torch_boost.hpp  torch_cubicspline.hpp
deepsmlm/cpp_src/include/depr/: multi_crlb.hpp
deepsmlm/cpp_src/inference/: main.cpp
deepsmlm/cpp_src/libtorchInterface/: inference.cpp  main.cpp  pybind_wrapper.cpp  setup.py  torch_boost.cpp  torch_boost.hpp  torch_cubicspline.cpp  torch_cubicspline.hpp
deepsmlm/cpp_src/libtorchInterface/lib/: cubic_spline.c  cubic_spline.h  spline_psf.c  spline_psf.h
deepsmlm/cpp_src/spikes/: simple_simulation.cu
deepsmlm/cpp_src/spikes/cuda_only_lib/: CMakeLists.txt  spline_psf_gpu.cu  spline_psf_gpu.cuh
deepsmlm/cpp_src/src/: multi_crlb.cpp  pybind_spline.cpp  pybind_wrapper.cpp  spline_psf.c  spline_psf_gpu.cu  torch_cubicspline.cpp
deepsmlm/cpp_src/src/depr/: CMakeLists_torch.txt  pybind_wrapper.cpp  torch_boost.cpp
deepsmlm/cpp_src/test/: CMakeLists.txt  catch_main.cpp  test_spline.cpp  test_torchcubicspline.cpp
deepsmlm/cpp_src/tests/: test_torchcppboost.cpp
deepsmlm/cpp_src/torch_cpp.xcodeproj/: project.pbxproj
deepsmlm/cpp_src/torch_cpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
deepsmlm/cpp_src/torch_cpp.xcodeproj/project.xcworkspace/xcuserdata/lucasmueller.xcuserdatad/: UserInterfaceState.xcuserstate
deepsmlm/cpp_src/torch_cpp.xcodeproj/xcshareddata/xcschemes/: libtorchInterface.xcscheme  testing.xcscheme  torch_cpp.xcscheme  torch_cppLibrary.xcscheme
deepsmlm/cpp_src/torch_cpp.xcodeproj/xcuserdata/lucasmueller.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
deepsmlm/cpp_src/torch_cpp.xcodeproj/xcuserdata/lucasmueller.xcuserdatad/xcschemes/: xcschememanagement.plist
deepsmlm/evaluation/: __init__.py  evaluation.py  match_emittersets.py  metric.py  metric_library.py  predict_dist.py  runMultiFitter.py  (+1 more)
docs/: build-release-notes.md
examples/: Evaluation.ipynb  Fit.ipynb  Introduction.ipynb  Training.ipynb  Training_real_data.ipynb
log/: README.md
network/: README.md
neuralfitter/: losscollection.py  train.py
test/: __init__.py  pytest.ini
(+372 files in other folders)
